--- a/tox.ini
+++ b/tox.ini
@@ -1,10 +1,11 @@
 [tox]
-envlist = py38-black,py38
+envlist = py3-black,py35,py36,py37,py38,py39
+skip_missing_interpreters = true
 
 [testenv]
 deps = -r requirements.txt
 commands = pytest {posargs} # substitute with tox' positional arguments
 
-[testenv:py38-black]
+[testenv:py3-black]
 deps = -r requirements.txt
 commands = black .
