--- a/tox.ini
+++ b/tox.ini
@@ -3,9 +3,9 @@ envlist = py3-black,py38,py39
 skip_missing_interpreters = true
 
 [testenv]
-deps = -r requirements.txt
+deps = -r requirements/development.txt
 commands = pytest {posargs} # substitute with tox' positional arguments
 
 [testenv:py3-black]
-deps = -r requirements.txt
+deps = -r requirements/development.txt
 commands = black .
