--- a/.github/workflows/build_and_upload_package.yml
+++ b/.github/workflows/build_and_upload_package.yml
@@ -9,11 +9,9 @@ jobs:
 
     steps:
       - name: Install buildtools
-        run: python -m pip install --user --upgrade -r requirements/build.txt
+        run: python -m pip install --user --upgrade -r ../../requirements/build.txt
       - name: Build a binary wheel and a source tarball
         run: python setup.py sdist bdist_wheel
       - name: Upload to pypi
-        run: python3 -m twine upload --repository testpypi dist/* --non-interactive
-        with:
-          TWINE_USERNAME: __token__
-          TWINE_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
+        run: |
+          python3 -m twine upload --repository pypi dist/* --non-interactive --username "__token__" --password "${{ secrets.PYPI_API_TOKEN }}"
