--- a/.github/workflows/build_and_upload_package.yml
+++ b/.github/workflows/build_and_upload_package.yml
@@ -9,7 +9,7 @@ jobs:
 
     steps:
       - name: Install buildtools
-        run: python -m pip install --user --upgrade -r ../../requirements/build.txt
+        run: python -m pip install --user --upgrade setuptools wheel twine
       - name: Build a binary wheel and a source tarball
         run: python setup.py sdist bdist_wheel
       - name: Upload to pypi
