--- a/.github/workflows/build_and_upload_package.yml
+++ b/.github/workflows/build_and_upload_package.yml
@@ -6,12 +6,22 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: ['3.8']
 
     steps:
+      - uses: actions/checkout@v2
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v2
+        with:
+          python-version: ${{ matrix.python-version }}
       - name: Install buildtools
-        run: python -m pip install --user --upgrade setuptools wheel twine
+        run: |
+          python3 -m pip install --user --upgrade setuptools wheel twine
       - name: Build a binary wheel and a source tarball
-        run: python setup.py sdist bdist_wheel
+        run: |
+          python3 setup.py sdist bdist_wheel
       - name: Upload to pypi
         run: |
           python3 -m twine upload --repository pypi dist/* --non-interactive --username "__token__" --password "${{ secrets.PYPI_API_TOKEN }}"
