--- a/.github/workflows/build_and_upload_package.yml
+++ b/.github/workflows/build_and_upload_package.yml
@@ -24,4 +24,4 @@ jobs:
           python3 setup.py sdist bdist_wheel
       - name: Upload to pypi
         run: |
-          python3 -m twine upload --repository pypi dist/* --non-interactive --username "__token__" --password "${{ secrets.PYPI_API_TOKEN }}"
+          python3 -m twine upload --repository pypi dist/* --non-interactive --username "__token__" --password "${{ secrets.PYPI_API_TOKEN }}" --skip-existing
