--- a/.github/workflows/run_tests_on_pr.yml
+++ b/.github/workflows/run_tests_on_pr.yml
@@ -19,7 +19,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements/development.txt
+        pip install tox
     - name: Test with tox
       run: |
         tox
