--- a/tox.ini
+++ b/tox.ini
@@ -1,10 +1,14 @@
 [tox]
-envlist = py3-black,py38,py39
+envlist = py3-black,py38,py39,coverage
 skip_missing_interpreters = true
 
 [testenv]
 deps = -r requirements/development.txt
 commands = pytest {posargs} # substitute with tox' positional arguments
+
+[testenv:coverage]
+deps = -r requirements/development.txt
+commands = pytest --cov=simulation --cov-fail-under=95 {posargs} # substitute with tox' positional arguments
 
 [testenv:py3-black]
 deps = -r requirements/development.txt
